# SoMaJo

./: .gitignore  CHANGES.txt  MANIFEST.in  README.md  README.rst  README.txt  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: test.yml
cmctokenizer/: single_token_abbreviations.txt
cmctokenizer/test/: test_tokenizer.py
doc/source/: conf.py  index.rst  modules.rst  somajo.rst  somajo.test.rst
somajo/: __init__.py  abbreviations.txt  abbreviations_de.txt  abbreviations_en.txt  camel_case_tokens.txt  cli.py  doubly_linked_list.py  non-breaking_hyphenated_words_en.txt  non-breaking_prefixes_en.txt  non-breaking_suffixes_en.txt  sentence_splitter.py  single_token_abbreviations.txt  single_token_abbreviations_de.txt  single_token_abbreviations_en.txt  somajo.py  token.py  tokenizer.py  tokens_with_plus_or_ampersand.txt  utils.py
somajo/data/: abbreviations_de.txt  abbreviations_en.txt  tokens_with_plus_or_ampersand.txt  units.txt
somajo/test/: test_doubly_linked_list.py  test_sentence_splitter.py  test_somajo.py  test_token.py  test_tokenizer.py  test_tokenizer_internal.py  test_utils.py
src/somajo/: __init__.py  alignment.py  cli.py  (+5 more)
tests/: test_alignment.py  test_doubly_linked_list.py  test_sentence_splitter.py  test_somajo.py  test_tokenizer.py  test_tokenizer_internal.py  test_utils.py
utils/: annotate_cmc.sh  annotate_web.sh  baseline.sh  errors_baseline_test.txt  errors_ewt.txt  errors_ewt_semi.txt  errors_gum.txt  errors_test.txt  errors_train.txt  errors_trial.txt  evaluate.py  evaluate_on_ewt.sh  evaluate_on_gum.sh  evaluate_on_konvens.sh  evaluate_on_test.sh  evaluate_on_test_cmc.sh  evaluate_on_test_web.sh  evaluate_on_train.sh  evaluate_on_trial.sh  run_tests.sh
(+5 files in other folders)
